--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
         'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #fff5f5;
+    background-color: #f5f5f5;
 }
 
 code {
@@ -46,8 +46,13 @@ img {
     height: auto;
 }
 .navlink {
-    color: teal;
+    color: white;
+    display: block;
+    padding: 10px 0;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 25px;
 }
 .activelink {
-    color: fuchsia;
+    color: #ccc6c6;
 }
