--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,13 @@ img {
 .activelink {
     color: #ccc6c6;
 }
+.info {
+    font-size: 16px;
+    color: #ccc6c6;
+    margin-right: 20px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+.activeinfo {
+    color: fuchsia;
+}
