--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ img {
     padding: 10px 0;
     font-weight: 700;
     text-transform: uppercase;
-    font-size: 25px;
+    font-size: 30px;
 }
 .activelink {
     color: #ccc6c6;
@@ -64,13 +64,14 @@ img {
     font-weight: 600;
 }
 .activeinfo {
-    color: #e010a1;
+    color: #fd004b;
 }
 .pagination {
     display: flex;
-    color: #e010a1;
+    justify-content: space-between;
+    color: #fd004b;
     font-size: 18px;
-    width: 360px;
+    width: 500px;
     margin: 20px auto;
 }
 .pagination li {
@@ -83,8 +84,9 @@ img {
 }
 .activepage {
     color: white;
-    width: 30px;
+    min-width: 30px;
     height: 30px;
-    background-color: #e010a1;
+    background-color: #fd004b;
     border-radius: 4px;
+    padding: 3px;
 }
