--- a/src/index.css
+++ b/src/index.css
@@ -92,12 +92,14 @@ img {
     border-radius: 4px;
     padding: 3px;
 }
-.dark-theme {
+body .dark-theme {
     background-color: #323232;
+    height: 100%;
 }
-/* .dark-theme li {
-    background-color: #353535;
-} */
+.dark-theme p {
+    color: #f5f5f5;
+}
+
 .theme-switch__toggle:checked + .theme-switch__track {
     background-color: #d3d3d4;
 }
